update inducao slides

--- a/slides/teoria_numeros/inducao.html
+++ b/slides/teoria_numeros/inducao.html
@@ -41,7 +41,12 @@
                 </ol>
             </section>
 
-            <section>
+            <section
+                data-background-image="/images/domino/domino_cover.svg"
+                data-background-repeat="no-repeat"
+                data-background-size="900px"
+                data-background-position="bottom right"
+            >
                 <h3>Derrubando Infinitos Dominó's</h3>
 
                 <p class="fragment fade-in">
