add references and techs

--- a/slides/teoria_numeros/inducao.html
+++ b/slides/teoria_numeros/inducao.html
@@ -162,12 +162,23 @@
             <section>
                 <h3>Referências</h3>
 
+                <ul>
+                    <li>Lima, Elon Lages. Análise real volume 1. Coleção Matemática Universitária. 8 ed. Rio de Janeiro: IMPA, 2006.</li>
+                </ul>
             </section>
 
-            <section>
+            <section data-background-color="white">
                 <h3>Tecnologias</h3>
 
-
+                <a href="https://revealjs.com" target="_blank">
+                    <img width="200" src="https://revealjs.com/images/logo/reveal-black-text.svg" style="margin: 20px" />
+                </a>
+                <a href="https://www.mathjax.org/" target="_blank">
+                    <img width="200" src="https://www.mathjax.org/badge/mj-logo.svg" style="margin: 20px" />
+                </a>
+                <a href="https://inkscape.org/pt-br/" target="_blank">
+                    <img width="100" src="https://media.inkscape.org/static/images/inkscape-logo.svg" style="margin: 20px" />
+                </a>
             </section>
         </div>
     </div>
